--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
         completions."
     </string>
     <string name="title_activity_register_user">Wikilegis</string>
-    <string name="action_reorder">Reorder</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_profile">Profile</string>
+    <string name="action_settings">Filtering</string>
     <string name="action_search">Search</string>
     <string name="action_exit_account">Exit Account</string>
 
