--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,10 @@
     </string>
     <string name="title_activity_register_user">Wikilegis</string>
     <string name="action_profile">Profile</string>
-    <string name="action_settings">Filtering</string>
+    <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_exit_account">Exit Account</string>
+    <string name="action_filtering">Filtrar</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
