Adding xml of AboutFragment and modifying xml of LoginFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
     <string name="action_exit_account">Exit Account</string>
     <string name="action_filtering">Filtrar</string>
     <string name="sucessfull_registration_message">Cadastro efetuado com sucesso!</string>
+    <string name="about_app">O Wikilegis é uma iniciativa da câmara dos deputados, que visa
+        aproximar a sociedade e seus representantes políticos através de interação digital.
+        Neste ambiente você tem acesso a projetos de leis que estão sendo elaborados e tem
+        a possibilidade de contribuir com eles, avaliando, sugerindo alterações e comentando
+        sua opinião.</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
