--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,16 @@
         sua opinião.</string>
 
 
+    <!-- all SharedPreferences keys-->
+    <string name="token">token</string>
+    <string name="is_logged_in">IsLoggedIn</string>
+    <string name="first_name">firstName</string>
+    <string name="last_name">lastName</string>
+    <string name="email">email</string>
+
+
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main2">Main2Activity</string>
