Adding option netword in Shared Preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="action_exit_account">Exit Account</string>
     <string name="action_logout">Sair</string>
     <string name="action_login">Entrar</string>
-    <string name="action_config">Configurações</string>
+    <string name="action_config">Configurações de download</string>
     <string name="sucessfull_registration_message">Cadastro efetuado com sucesso!</string>
     <string name="about_app">O Wikilegis é uma iniciativa da câmara dos deputados, que visa
         aproximar a sociedade e seus representantes políticos através de interação digital.
@@ -36,6 +36,7 @@
     <string name="first_name">firstName</string>
     <string name="last_name">lastName</string>
     <string name="email">email</string>
+    <string name="network_settings">NetworkSettings</string>
 
 
 
