Creating methods for dynamic get requets
Signed-off-by: Lucas Brilhante <lbrilhante82@gmail.com>
Signed-off-by: Marcelo Augusto <mekmay@hotmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="last_name">lastName</string>
     <string name="email">email</string>
     <string name="network_settings">NetworkSettings</string>
+    <string name="last_downloaded_date">date</string>
 
 
 
