Validating empty suggestion
Signed-off-by: Izabela Cardoso <cizabelacristina@gmail.com>
Signed-off-by: josutk <josuetk@gmail.com>
Signed-off-by: Pedro Ivo Andrade <andradepedroivo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,9 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <!-- Proposal suggestion strings -->
+    <string name="connection_problem">Desculpe, um problema ocorreu</string>
+    <string name="empty_segment">Por favor, digite uma sugestão</string>
+    <string name="success_proposal">Obrigado pela sugestão!</string>
+
 </resources>
