--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,8 @@
     <string name="empty_comment">Por favor, digite um comentário</string>
     <string name="success_comment">Obrigado pelo comentário!</string>
 
+    <!-- Sharing Edemocracia Links -->
+    <string name="edemocracia_domain">http://wikilegis-staging.labhackercd.net</string>
+    <string name="edemocracia_bill">/bill/</string>
+    <string name="edemocracia_segment">/segments/</string>
 </resources>
