Fixing share button on toolbar
Signed-off-by: Thiago Nogueira <thiagonf10@gmail.com>
Singed-off-by: Pedro Ivo Andrade <andradepedroivo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="email">email</string>
     <string name="network_settings">NetworkSettings</string>
     <string name="last_downloaded_date">date</string>
-
+    <string name="share_url">shareUrl</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
