--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WikiLegis</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Wikilegis</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
