Getting id of user in ViewSegmentFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
 
     <!-- all SharedPreferences keys-->
     <string name="token">token</string>
+    <string name="id">id</string>
     <string name="is_logged_in">IsLoggedIn</string>
     <string name="first_name">firstName</string>
     <string name="last_name">lastName</string>
